@@ -1,3 +1,3 @@
 module Ripple
-  VERSION = "3.0.0"
+  VERSION = "3.1.0"
 end
